src/objects/MUSW__Query__c.object
<CustomObject>
    <description>Query definitions including fields, where clause, etc</description>
    <fields>
        <fullName>MUSW__Fields__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fields</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__LIMIT_Filter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LIMIT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__ORDER_BY_Direction__c</fullName>
        <label>ORDER BY Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASC</fullName>
                </value>
                <value>
                    <fullName>DESC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__ORDER_BY_Filter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ORDER BY Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Object_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__WHERE_Filter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>eg. Region__c = &apos;East&apos; AND ModifiedDate = LAST_YEAR</inlineHelpText>
        <label>WHERE Filter</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Query</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MUSW__Fields_Required</fullName>
        <active>true</active>
        <errorConditionFormula>MUSW__Fields__c =&quot;&quot;</errorConditionFormula>
        <errorDisplayField>MUSW__Fields__c</errorDisplayField>
        <errorMessage>You must specify which Fields you want the Query to return.</errorMessage>
    </validationRules>
</CustomObject>